# rules_rome

./: .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl  rome.json
.github/workflows/: ci.yaml  workspace_snippet.sh
docs/: BUILD.bazel  rules.md
e2e/workspace/: BUILD.bazel  WORKSPACE  index.js
example/: BUILD.bazel  rome.json
rome/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  rome.json  toolchain.bzl
rome/private/: BUILD.bazel  rome.bzl  rome_launcher.tpl  toolchains_repo.bzl  versions.bzl
rome/private/test/: BUILD.bazel
rome/private/tests/: BUILD.bazel  rome_failure_test.sh  versions_test.bzl
rome/private/tests/fixtures/: unformatted.js
scripts/: filter.jq  mirror_release.sh
tools/: BUILD.bazel
