load("//rome:defs.bzl", "rome")

package(default_visibility = ["//visibility:public"])

rome(
    name = "check",
    cmd = ["check", "--apply", "$BUILD_WORKING_DIRECTORY"],
    config = "//:rome.json",
)

rome(
    name = "format",
    cmd = ["format", "--write", "$BUILD_WORKING_DIRECTORY"],
    config = "//:rome.json",
)
