load("//rome:defs.bzl", "rome")

package(default_visibility = ["//visibility:public"])

exports_files(["rome.json"], visibility = ["//visibility:public"])

rome(
    name = "check",
    command = "check",
    options = ["--apply", "$BUILD_WORKING_DIRECTORY"],
    config = "//tools:rome.json",
    visibility = ["//visibility:public"],
)

rome(
    name = "format",
    command = "format",
    options = ["--write", "$BUILD_WORKING_DIRECTORY"],
    config = "//tools:rome.json",
    visibility = ["//visibility:public"],
)
